# PWR

./: .gitignore  AUTHORS  CopyrightNotice.cpp  CopyrightNotice.hpp  INSTALL.meson  beautify  meson.build  pi.build  pi2.build  pi3.build  x86.build
doc/: Doxyfile
doc/Design/: .gitignore  Passive Weather Radar Theory.tex
doc/Geographic/: .gitignore  .~lock.TECHNICAL_RECORDS.csv#  TECHNICAL_RECORDS.csv
doc/Literature/: .gitignore
doc/Notes/: Frequencies_at_YNRG.html  Transmitter_Discrimination.html  Useful_Web_Sites.html
lib/: meson.build
lib/examples/: cell_measurement.cpp  cell_search.c  meson.build  pdsch_enodeb.c  pdsch_ue.c  synch_file.c  usrp_capture.c  usrp_capture_sync.c  usrp_txrx.c
lib/include/: config.hpp  lte.hpp  version.hpp
lib/include/interfaces/: ue_interfaces.hpp
lib/include/phy/common/: phy_common.hpp  sequence.hpp
lib/include/phy/dft/: dft.hpp
lib/include/phy/sync/: cfo.hpp  cp.hpp  pss.hpp  sfo.hpp  sss.hpp  sync.hpp
lib/include/phy/ue/: ue_cell_search.h  ue_dl.h  ue_mib.h  ue_phy.h  ue_sync.h  ue_ul.h
lib/include/phy/utils/: bit.hpp  cexptab.hpp  convolution.hpp  filter.hpp  simd.hpp  vector.hpp  vector_simd.hpp
lib/include/srslte/: version.h
lib/include/srslte/asn1/: rrc_asn1.h
lib/src/: meson.build
lib/src/common/: meson.build  threads.c
lib/src/phy/: meson.build
lib/src/phy/Test/: pss_file.cpp
lib/src/phy/ch_estimation/: chest_dl.c  refsignal_ul.c
lib/src/phy/common/: meson.build  phy_common.cpp  sequence.cpp
lib/src/phy/dft/: dft.cpp  meson.build  ofdm.c
lib/src/phy/rf/: meson.build  rf_soapy_imp.c
lib/src/phy/sync/: cfo.cpp  cp.cpp  find_sss.cpp  gen_sss.cpp  meson.build  pss.cpp  sfo.cpp  sss.cpp  sync.cpp
lib/src/phy/ue/: ue_cell_search.c  ue_dl.c  ue_mib.c  ue_sync.c  ue_ul.c
lib/src/phy/utils/: bit.cpp  cexptab.cpp  convolution.cpp  filter.cpp  meson.build  vector.cpp  vector_simd.cpp
lib/src/radio/: meson.build
lib/test/: meson.build
lib/test/asn1/: meson.build  s1ap_test.cc  srslte_asn1_m2ap_test.cc  srslte_asn1_rrc_dl_ccch_test.cc  srslte_asn1_rrc_dl_dcch_test.cc  srslte_asn1_rrc_mcch_test.cc  srslte_asn1_rrc_meas_test.cc  srslte_asn1_rrc_ul_dcch_test.cc
lib/test/common/: bcd_helpers_test.cpp  log_filter_test.cpp  logger_test.cpp  meson.build  msg_queue_test.cpp  test_eea1.cpp  test_eea2.cpp  test_eia1.cpp  test_f12345.cpp  timeout_test.cpp
lib/test/phy/: meson.build  phy_dl_test.c
lib/test/upper/: rlc_am_control_test.cc  rlc_am_data_test.cc  rlc_am_test.cc  rlc_stress_test.cc  rlc_um_data_test.cc  rlc_um_test.cc
lib/tools/: cell_track.c  gen_base_signal.c  meson.build  print_band_data.cpp
src/: meson.build
src/Development/GNURadio/: Example_2.grc  PWR_test_receiver.py
src/GNURadio/: PWR_model.py  PWR_test_receiver.py  Test_Receiver.grc  example_1.py
src/Receiver/: Metrics.hpp  PhchCommon.cpp  PhchCommon.hpp  PhchReceiver.cpp  PhchReceiver.hpp  PhchWorker.cpp  PhchWorker.hpp  Phy.cpp  Phy.hpp  meson.build
src/Station/Pi/: .gitignore  vm
src/lib/: meson.build
test/Development/GNURadio/: .gitignore  All_Blocks.grc  BW_Limited_Receiver.grc  BW_Limited_Receiver_Simulation.grc  Decimation_Model.grc  Example_1.grc  LTE_test.grc  Model.grc  Network-Instrument-Termination.grc  Network_Receiver.grc  Network_Receiver_Simulation.grc  Pss_Sync.grc  Raw_Data_Playback.grc  Record_Raw_Baseband.grc  SSS_Sync.grc  SimpleSource.grc  Test_Receiver.grc  example_2.py  lte_top_block_siso.grc  rtl_sdr_data_conditioner.grc
test/Development/GNURadio/hierachy/: pwr_bch_decoder.grc
test/qt/: grapical-sink.grc
test/simulate/design/: ambiguity.m
test/simulate/design/FM/: FM_data_generator.grc
test/simulate/design/M-Sequence/Generator/: M_Sequence_data_generator.grc
test/simulate/design/M-Sequence/Receiver/: Scrambler.grc
