#libcommon = library('common',
#                      'arch_select.cc',
#                      'buffer_pool.cc',
#                      'crash_handler.c',
#                      'gen_mch_tables.c',
#                      'liblte_security.cc',
#                      'log_filter.cc',
#                      'logger_file.cc',
#                      'mac_pcap.cc',
#                      'nas_pcap.cc',
#                      'pdu.cc',
#                      'pdu_queue.cc',
#                      'rlc_pcap.cc',
#                      's1ap_pcap.cc',
#                      'security.cc',
#                      'snow_3g.cc',
#                      'task_dispatcher.cc',
#                      'thread_pool.cc',
#                      'threads.c',
#                      'tti_sync_cv.cc',
#                      'version.c',
#                      include_directories : lib_includes,
#                      library_includes : lib_includes)
libcommon = static_library('common',
                             'arch_select.cc',
                             'buffer_pool.cc',
                             'crash_handler.c',
                             'gen_mch_tables.c',
                             'log_filter.cc',
                             'logger_file.cc',
                             'mac_pcap.cc',
                             'nas_pcap.cc',
                             'pdu.cc',
                             'pdu_queue.cc',
                             'rlc_pcap.cc',
                             's1ap_pcap.cc',
                             'security.cc',
                             'snow_3g.cc',
                             'task_dispatcher.cc',
                             'thread_pool.cc',
                             'threads.c',
                             'tti_sync_cv.cc',
                             'version.c',
                             include_directories : lib_includes,
                          )
