libsync = library('sync',
                    'cfo.c',
                    'cp.c',
                    'find_sss.c',
                    'gen_sss.c',
                    'pss.c',
                    'sfo.c',
                    'sss.c',
                    'sync.c', 
                    include_directories : lib_includes,
                    library_includes : lib_includes)
