libutils = library('utils',
                     'bit.c',
                     'cexptab.c',
                     'convolution.c',
                     'filter.c',
                     'mat.c',
                     'ringbuffer.c'
                     'vector.c',
                     'vector_simd.c',
                     include_directories : lib_includes,
                     )
